--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
         <div class="nav-links" id="navLinks">
           <a href="#services">Services</a>
           <a href="#process">How it works</a>
+          <a href="pricing.html">Pricing</a>
           <a href="#contact">Contact</a>
           <button class="nav-cta" data-action="open-form">Book free WiFi check</button>
         </div>
