--- a/pricing/index.html
+++ b/pricing/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Transparent pricing for whole-home WiFi installation and networking services in Cincinnati. Simple, upfront pricing with no hidden fees." />
   <meta name="keywords" content="WiFi pricing, home networking pricing, UniFi installation cost, Cincinnati" />
   
-  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="../css/styles.css" />
   <style>
     /* Pricing page specific styles using home page color scheme */
     .pricing-hero {
@@ -385,7 +385,7 @@
     <header>
       <nav class="nav" role="navigation" aria-label="Main navigation">
         <div class="nav-left">
-          <a href="index.html" class="logo-link" aria-label="Jordan Home Solutions home">
+          <a href="../index.html" class="logo-link" aria-label="Jordan Home Solutions home">
             <div class="logo-mark" aria-hidden="true"><span></span></div>
             <div class="brand-text">
               <span class="brand-name">Jordan Home Solutions</span>
@@ -399,9 +399,9 @@
           <span></span>
         </button>
         <div class="nav-links" id="navLinks">
-          <a href="index.html#services">Services</a>
-          <a href="index.html#process">How it works</a>
-          <a href="pricing.html">Pricing</a>
+          <a href="../index.html#services">Services</a>
+          <a href="../index.html#process">How it works</a>
+          <a href="index.html">Pricing</a>
           <button class="nav-cta" data-action="open-form">Book free WiFi check</button>
         </div>
       </nav>
@@ -462,7 +462,7 @@
           </ul>
 
           <div class="pricing-cta">
-            <a href="index.html#contact" class="btn-ghost">Book Essential Tune-Up</a>
+            <a href="../index.html#contact" class="btn-ghost">Book Essential Tune-Up</a>
           </div>
         </article>
 
@@ -488,7 +488,7 @@
           </ul>
 
           <div class="pricing-cta">
-            <a href="index.html#contact" class="btn-primary">Schedule Whole-Home Upgrade</a>
+            <a href="../index.html#contact" class="btn-primary">Schedule Whole-Home Upgrade</a>
           </div>
         </article>
 
@@ -513,14 +513,14 @@
           </ul>
 
           <div class="pricing-cta">
-            <a href="index.html#contact" class="btn-ghost">Plan Smart Home & NAS</a>
+            <a href="../index.html#contact" class="btn-ghost">Plan Smart Home & NAS</a>
           </div>
         </article>
       </div>
 
       <div class="note-row">
         <span>All prices are estimates for typical homes. Final quote depends on size, wiring, and hardware selected.</span>
-        <span>Need something different? <a href="index.html#contact">Ask for a custom quote →</a></span>
+        <span>Need something different? <a href="../index.html#contact">Ask for a custom quote →</a></span>
       </div>
 
       <section class="custom-block">
@@ -533,7 +533,7 @@
           Typical projects range from <strong>$900–$3,000</strong> (hardware + labor).  
           <br />Hourly consulting available for specific issues or design reviews.
         </div>
-        <a href="index.html#contact" class="btn-inline">
+        <a href="../index.html#contact" class="btn-inline">
           Get a custom quote
           <span aria-hidden="true">→</span>
         </a>
@@ -552,15 +552,15 @@
           </div>
         </div>
         <div class="footer-links">
-          <a href="index.html#top">Back to top</a>
-          <a href="index.html#services">Services</a>
-          <a href="index.html#process">How it works</a>
+          <a href="../index.html#top">Back to top</a>
+          <a href="../index.html#services">Services</a>
+          <a href="../index.html#process">How it works</a>
         </div>
       </div>
     </footer>
   </div>
 
-  <script src="js/main.js"></script>
+  <script src="../js/main.js"></script>
   <script>
     // Billing toggle functionality
     const toggle = document.getElementById('billingToggle');
