--- a/pricing/index.html
+++ b/pricing/index.html
@@ -401,7 +401,7 @@
         <div class="nav-links" id="navLinks">
           <a href="/#services">Services</a>
           <a href="/#process">How it works</a>
-          <a href="/pricing/">Pricing</a>
+          <a href="/pricing">Pricing</a>
           <button class="nav-cta" data-action="open-form">Book free WiFi check</button>
         </div>
       </nav>
