--- a/pricing/index.html
+++ b/pricing/index.html
@@ -160,6 +160,7 @@
     .pricing-section {
       padding: 4rem 1.5rem;
       background: var(--white);
+      overflow: visible;
     }
 
     .pricing-grid {
@@ -168,6 +169,8 @@
       gap: 2rem;
       max-width: 1200px;
       margin: 0 auto 2.5rem;
+      overflow: visible;
+      padding-bottom: 8px; /* Reserve space for hover animation */
     }
 
     .pricing-card {
@@ -178,7 +181,10 @@
       display: flex;
       flex-direction: column;
       position: relative;
-      transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+      transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1), 
+                  box-shadow 0.3s cubic-bezier(0.4, 0, 0.2, 1),
+                  border-color 0.3s cubic-bezier(0.4, 0, 0.2, 1),
+                  background 0.3s cubic-bezier(0.4, 0, 0.2, 1);
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.04);
     }
 
