--- a/pricing/index.html
+++ b/pricing/index.html
@@ -290,19 +290,26 @@
 
     .pricing-cta {
       margin-top: auto;
-      overflow: hidden;
+      overflow: hidden !important;
       border-radius: 999px; /* Match button border radius */
+      isolation: isolate; /* Create new stacking context */
+      /* Ensure nothing extends beyond this container */
+      position: relative;
+      z-index: 0;
     }
 
     .pricing-cta .btn-primary,
     .pricing-cta .btn-ghost {
+      display: block; /* Ensure buttons are block-level for proper containment */
       width: 100%;
       padding: 0.9rem 1.4rem;
       font-size: 0.95rem;
       font-weight: 600;
       position: relative;
-      overflow: hidden;
-      border-radius: 999px; /* Ensure rounded corners clip content */
+      overflow: hidden !important;
+      border-radius: 999px !important; /* Ensure rounded corners clip content */
+      isolation: isolate; /* Create new stacking context for proper clipping */
+      contain: layout style paint; /* CSS containment for better clipping */
     }
 
     /* Ensure button text stays above sliding background */
@@ -311,10 +318,33 @@
       transition: color 0.3s cubic-bezier(0.4, 0, 0.2, 1), 
                   transform 0.3s cubic-bezier(0.4, 0, 0.2, 1),
                   box-shadow 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+      z-index: 1; /* Ensure button content is above ::before */
     }
 
     .pricing-cta .btn-ghost:hover {
       color: var(--white);
+    }
+
+    /* Ensure sliding background is clipped to button boundaries */
+    .pricing-cta .btn-ghost::before {
+      border-radius: 999px; /* Match button border-radius */
+      top: 0;
+      left: -100%;
+      right: auto;
+      bottom: 0;
+      z-index: -1; /* Keep behind button content */
+      /* Ensure it's completely hidden when not hovered - use clip-path for better control */
+      clip-path: inset(0 100% 0 0); /* Clip everything to the right, hiding the element */
+      transition: left 0.3s ease, clip-path 0.3s ease;
+    }
+
+    .pricing-cta .btn-ghost:hover::before {
+      left: 0;
+      clip-path: inset(0 0 0 0); /* Show the full element on hover */
+    }
+
+    .pricing-cta .btn-primary {
+      z-index: 1; /* Ensure button content is above ::before */
     }
 
     .pricing-cta .btn-primary {
@@ -323,10 +353,12 @@
                   box-shadow 0.3s cubic-bezier(0.4, 0, 0.2, 1);
     }
 
-    /* Limit ripple effect size for pricing page buttons */
+    /* Limit ripple effect size and ensure it's clipped */
     .pricing-cta .btn-primary::before {
       max-width: 200px;
       max-height: 200px;
+      border-radius: 50%;
+      overflow: hidden;
     }
 
     /* Note Row */
